objects/Campaign_Routing__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Lead_Received_Date_Time__c</fullName>
        <label>Last Lead Received Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Campaigns Routing</relationshipLabel>
        <relationshipName>Campaigns_Routing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns_Routing</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Campaign Routing</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Last_Lead_Received_Date_Time__c</columns>
        <columns>Lead__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CR-{000}</displayFormat>
        <label>Campaign Routing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaigns Routing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>